[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sasuke/Sasuke.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sasuke/sasukesprite.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sasuke/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Menus/PauseMenu/PauseMenu.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 13, 22.8306 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12.2081, 10.354 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 5.69308, 28.303 )

[node name="Sasuke" type="KinematicBody2D"]

position = Vector2( 0, -48 )
scale = Vector2( 1, 1.5 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "Z Index", "collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 5.34058e-07, 0 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 9.53674e-07, -0.125581 )
scale = Vector2( 2.46154, 1.39613 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 3 )
_sections_unfolded = [ "Limit" ]

[node name="PauseMenu" parent="Camera2D" index="0" instance=ExtResource( 4 )]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
rect_scale = Vector2( 1, 0.666667 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="Head" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head" index="0"]

position = Vector2( 0, -21.3333 )
scale = Vector2( 2.54524, 1.06667 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Foot" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foot" index="0"]

position = Vector2( 0, 21.3009 )
scale = Vector2( 2.54524, 1.06667 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Left" type="Area2D" parent="." index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left" index="0"]

position = Vector2( -17.8113, -0.111565 )
scale = Vector2( 2.54524, 1.06667 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Right" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right" index="0"]

position = Vector2( 18.1033, -0.111572 )
scale = Vector2( 2.54524, 1.06667 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]

[connection signal="body_exited" from="Head" to="." method="_on_Head_body_exited"]

[connection signal="body_entered" from="Foot" to="." method="_on_Foot_body_entered"]

[connection signal="body_exited" from="Foot" to="." method="_on_Foot_body_exited"]

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]

[connection signal="body_exited" from="Left" to="." method="_on_Left_body_exited"]

[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]

[connection signal="body_exited" from="Right" to="." method="_on_Right_body_exited"]


